# Amilla

./: .gitignore  .gitmodules  Amilla.sln  Amilla.vcxproj  Amilla.vcxproj.filters  CMakeLists.txt  Chip8 Interpreter.vcxproj  Chip8 Interpreter.vcxproj.filters  Chip8.vcxproj  Chip8.vcxproj.filters  Launcher.vcxproj  Launcher.vcxproj.filters  README.md  Test.vcxproj  Test.vcxproj.filters
Chip8/: Chip8.sln
Chip8/Chip8.Domain/: CPU.cs  Chip8.Domain.csproj  Display.cs  Machine.cs  Memory.cs  Opcode.cs  State.cs  UnknownOpcodeException.cs
Chip8/Chip8.Domain.Tests/: Chip8.Domain.Tests.csproj  MemoryTests.cs  OpcodeTests.cs  StateTests.cs  packages.config
Chip8/Chip8.Domain.Tests/Instructions/: Op0.cs  Op1.cs  Op2.cs  Op3.cs  Op4.cs  Op5.cs  Op6.cs  Op7.cs  Op8.cs  Op9.cs  OpA.cs  OpB.cs  OpE.cs  OpF.cs
Chip8/Chip8.Domain/Interfaces/: IChip8.cs  (+6 more)
Chip8/Chip8.MonoGame/: Chip8.MonoGame.csproj  Chip8.cs  Program.cs
Source/: Display.cpp  Display.hpp  IInterpreterShell.hpp  IResettable.hpp  Interpreter.cpp  Interpreter.hpp  InterpreterSFML.cpp  InterpreterSFML.hpp  Main.cpp  State.cpp  State.hpp  Storage.cpp  Storage.hpp
Source/Chip8/: Display.hpp  Emulator.cpp  Emulator.hpp  EmulatorSFML.cpp  EmulatorSFML.hpp  IInterpreter.hpp  Interpreter.hpp  InterpreterSFML.hpp  Main.cpp  State.hpp  Storage.hpp
Source/Launcher/: main.cpp
Test/: Chip8.cpp
include/Amilla/: IEmulator.hpp
include/Chip8/: Display.hpp  Emulator.hpp  EmulatorSFML.hpp  IChip8Emulator.hpp  IChip8EmulatorShell.hpp  State.hpp  Storage.hpp
src/Chip8/: Display.cpp  Emulator.cpp  EmulatorSFML.cpp
(+10 files in other folders)
